# online-dynamic-batching

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug_report.yml
.github/workflows/: ci.yml
agent-skills/odb-integration/: SKILL.md
agent-skills/odb-integration/agents/: openai.yaml
agent-skills/odb-integration/references/: accelerate.md  hf-trainer.md  lightning.md  llamafactory.md  pytorch-loop.md
agent-skills/odb-integration/scripts/: audit_odb_integration.py  detect_training_framework.py
docs/: API_DESIGN_NOTES.md  GROUPING_ALGORITHM.md  README.md  agent-assisted-integration.md  benchmarks.md  index.md  integrations.md  quickstart.md  runtime-settings.md  validation.md
docs/integration-guides/: README.md  accelerate.md  adapter-principles.md  hf-trainer.md  lightning.md  llamafactory.md  pytorch-loop.md
examples/: synthetic_benchmark.py
examples/notebooks/: odb_single_gpu_demo.ipynb
src/odb/: __init__.py  callbacks.py  collate.py  config.py  constants.py  core.py  dataloader.py  grouping.py  handle.py  step_info.py  utils.py
src/odb/integrations/: __init__.py  accelerate.py  hf.py  lightning.py  llamafactory.py  llavafactory.py
tests/: test_accelerate_integration.py  test_callback.py  test_config.py  test_dataloader.py  test_ddp_smoke.py  test_grouping.py  test_hf_integration.py  test_interface_matrix.py  test_lightning_integration.py  test_llamafactory_integration.py  test_step_info.py  test_utils.py
