[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "online-dynamic-batching"
dynamic = ["version"]
description = "Online Dynamic Batching (ODB) — a PyTorch DataLoader-side integration that dynamically groups sequences by length and adjusts batch sizes on-the-fly."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Online Dynamic Batching Contributors" },
]
dependencies = ["torch>=2.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["pytorch", "dataloader", "dynamic-batching", "llm", "training"]

[project.optional-dependencies]
hf = ["transformers>=4.40"]
accelerate = ["accelerate>=0.28"]
lightning = ["lightning>=2.1"]
all = ["transformers>=4.40", "accelerate>=0.28", "lightning>=2.1"]
dev = ["pytest>=7.0", "pytest-timeout>=2.0", "ruff>=0.4"]
release = ["build>=1.2.0", "twine>=5.0.0"]

[project.urls]
Homepage = "https://github.com/online-dynamic-batching/online-dynamic-batching"
Documentation = "https://github.com/online-dynamic-batching/online-dynamic-batching/tree/main/docs"
Repository = "https://github.com/online-dynamic-batching/online-dynamic-batching"
Issues = "https://github.com/online-dynamic-batching/online-dynamic-batching/issues"
Changelog = "https://github.com/online-dynamic-batching/online-dynamic-batching/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "odb._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["odb*"]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"examples/synthetic_benchmark.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "timeout(seconds): mark slow multiprocessing smoke tests; enforced when pytest-timeout is installed.",
]
